--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.5.5",
     "@nuxt/typescript-build": "^0.1.11",
     "@nuxtjs/eslint-config-typescript": "^0.1.2",
     "@nuxtjs/eslint-module": "^1.0.0",
