--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/addon-links": "^5.1.11",
     "@storybook/addons": "^5.1.11",
     "@storybook/vue": "^5.1.11",
+    "@types/jest": "^24.0.18",
     "@types/storybook__vue": "^5.0.2",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
